--- a/index.html
+++ b/index.html
@@ -1,24 +1,87 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="no">
 <head>
-    <meta charset="utf-8">
-    <title>Coop Lager og CoopGo-stasjoner</title>
+    <meta charset="UTF-8">
+    <title>Coop Lager og CoopGo – Interaktiv</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        input { margin: 5px; }
+        table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+        th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+        th { background-color: #f0f0f0; }
+    </style>
 </head>
 <body>
-    <h1>CoopKart med Trafikkdata</h1>
-    <iframe src="coop_lagerkart_oppdatert.html" width="100%" height="600px" style="border:none;"></iframe>
-    <br><br>
-    
-<h2>Tabell: Coop Lagerlokasjoner</h2>
-<table border="1" style="border-collapse: collapse; width: 100%;">
-<thead><tr><th>Navn</th><th>Adresse</th><th>Beskrivelse</th><th>ÅDT</th><th>Inntjening</th></tr></thead><tbody>
-<tr><td>C-Log (Gardermoen)</td><td>Vilbergvegen 130, 2067 Jessheim</td><td>Hovedlager, høy trafikk, moderne og automatisert. Nær E6 og Oslo Lufthavn.</td><td>50 000+ kjøretøy per døgn</td><td>1,250,000 kr per dag</td></tr><tr><td>Langhus (Viken)</td><td>Regnbueveien 5, 1405 Langhus</td><td>Automatisert logistikksenter nær E6, sør for Oslo.</td><td>35 000–45 000 kjøretøy per døgn</td><td>1,125,000 kr per dag</td></tr><tr><td>Trondheim Regionlager</td><td>Østre Rosten 108, 7075 Tiller</td><td>Regionlager for Midt-Norge. God tilgjengelighet til E6.</td><td>25 000–30 000 kjøretøy per døgn</td><td>750,000 kr per dag</td></tr><tr><td>Stavanger Regionlager</td><td>Nesflåtveien 4, 4018 Stavanger</td><td>Regionlager for Sørvestlandet. Ligger i trafikkert næringsområde.</td><td>20 000–25 000 kjøretøy per døgn</td><td>625,000 kr per dag</td></tr><tr><td>Bergen Regionlager</td><td>Sandbrekkevegen 81, 5225 Nesttun</td><td>Regionlager med god tilgang til hovedveinettet i Bergen.</td><td>30 000–35 000 kjøretøy per døgn</td><td>875,000 kr per dag</td></tr><tr><td>Tromsø Regionlager</td><td>Ringvegen 770, 9015 Tromsø</td><td>Regionlager for Nord-Norge. Viktig knutepunkt i nord.</td><td>15 000–20 000 kjøretøy per døgn</td><td>500,000 kr per dag</td></tr></tbody></table>
-    <br><br>
-    
-<h2>Tabell: Ønskede CoopGo-stasjoner</h2>
-<table border="1" style="border-collapse: collapse; width: 100%;">
-<thead><tr><th>Navn</th><th>ÅDT</th><th>Inntjening</th></tr></thead><tbody>
-<tr><td>E6 Alnabru, Oslo</td><td>Over 100 000 kjøretøy per døgn</td><td>2,500,000 kr per dag</td></tr><tr><td>E18 Skøyen, Bærum</td><td>Opp mot 90 000 kjøretøy per døgn</td><td>2,250,000 kr per dag</td></tr><tr><td>Ring 3 Ryen-krysset, Oslo</td><td>70 700 kjøretøy per døgn</td><td>1,767,500 kr per dag</td></tr><tr><td>E6 Sluppen, Trondheim</td><td>47 500 kjøretøy per døgn</td><td>1,187,500 kr per dag</td></tr><tr><td>E39 Forus, Stavanger</td><td>Over 57 000 kjøretøy per døgn</td><td>1,425,000 kr per dag</td></tr><tr><td>E39 Lagunen, Bergen</td><td>Ukjent</td><td>Estimert basert på lokasjon</td></tr></tbody></table>
+
+<h1>Coop Lager og CoopGo – Interaktiv Oversikt</h1>
+
+<label for="prosent">Prosentandel (eks. 5):</label>
+<input type="number" id="prosent" value="5" min="1" max="20"> %
+
+<label for="kr">Verdi per kunde:</label>
+<input type="number" id="kr" value="500" min="100" max="1000"> kr
+
+<iframe src="coop_lagerkart_oppdatert.html" width="100%" height="600" style="border:none; margin-top: 20px;"></iframe>
+
+<div id="tabeller"></div>
+
+<script>
+const lagerData = [
+    { navn: "C-Log (Gardermoen)", adresse: "Vilbergvegen 130, 2067 Jessheim", adt: "50 000" },
+    { navn: "Langhus (Viken)", adresse: "Regnbueveien 5, 1405 Langhus", adt: "40 000" },
+    { navn: "Trondheim Regionlager", adresse: "Østre Rosten 108, 7075 Tiller", adt: "27 500" },
+    { navn: "Stavanger Regionlager", adresse: "Nesflåtveien 4, 4018 Stavanger", adt: "22 500" },
+    { navn: "Bergen Regionlager", adresse: "Sandbrekkevegen 81, 5225 Nesttun", adt: "32 500" },
+    { navn: "Tromsø Regionlager", adresse: "Ringvegen 770, 9015 Tromsø", adt: "17 500" },
+];
+
+const coopgoData = [
+    { navn: "E6 Alnabru, Oslo", adt: "100 000" },
+    { navn: "E18 Skøyen, Bærum", adt: "90 000" },
+    { navn: "Ring 3 Ryen-krysset, Oslo", adt: "70 700" },
+    { navn: "E6 Sluppen, Trondheim", adt: "47 500" },
+    { navn: "E39 Forus, Stavanger", adt: "57 000" },
+    { navn: "E39 Lagunen, Bergen", adt: "Ukjent" },
+];
+
+function formater(kr) {
+    return kr.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") + " kr";
+}
+
+function visTabeller() {
+    const prosent = parseFloat(document.getElementById("prosent").value) || 0;
+    const kr = parseFloat(document.getElementById("kr").value) || 0;
+
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Inntjening</th></tr>";
+    lagerData.forEach(item => {
+        const adt = parseInt(item.adt.replace(/\s/g, ""));
+        const inntjening = formater(adt * (prosent / 100) * kr);
+        html += `<tr><td>${item.navn}</td><td>${item.adresse}</td><td>${item.adt}</td><td>${inntjening}</td></tr>`;
+    });
+    html += "</table>";
+
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>Inntjening</th></tr>";
+    coopgoData.forEach(item => {
+        if (item.adt === "Ukjent") {
+            html += `<tr><td>${item.navn}</td><td>Ukjent</td><td>Estimert</td></tr>`;
+        } else {
+            const adt = parseInt(item.adt.replace(/\s/g, ""));
+            const inntjening = formater(adt * (prosent / 100) * kr);
+            html += `<tr><td>${item.navn}</td><td>${item.adt}</td><td>${inntjening}</td></tr>`;
+        }
+    });
+    html += "</table>";
+
+    document.getElementById("tabeller").innerHTML = html;
+}
+
+// Oppdater tabeller ved endring
+document.getElementById("prosent").addEventListener("input", visTabeller);
+document.getElementById("kr").addEventListener("input", visTabeller);
+
+// Init
+visTabeller();
+</script>
+
 </body>
 </html>
