--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <div class="hoyre">
         <div class="filter-container">
             <label for="prosent">Prosentandel (f.eks. 5):</label>
-            <input type="number" id="prosent" value="5" min="1" max="20"> %
+            <input type="number" id="prosent" value="5" min="1"> %
 
             <label for="kr">Verdi per kunde:</label>
-            <input type="number" id="kr" value="500" min="100" max="1000"> kr
+            <input type="number" id="kr" value="500" min="100"> kr
         </div>
 
         <div id="tabeller"></div>
