La til index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ const lagerData = [
 
 const coopgoData = [
     { navn: "E6 Alnabru, Oslo", adt: "100 000" },
-    { navn: "E18 Skøyen, Bærum", adt: "90 000" },
+    { navn: "E18 Lysaker, Bærum", adt: "90 000" },
     { navn: "Ring 3 Ryen-krysset, Oslo", adt: "70 700" },
     { navn: "E6 Sluppen, Trondheim", adt: "47 500" },
     { navn: "E39 Forus, Stavanger", adt: "57 000" },
