--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
     <div class="hoyre">
         <div class="filter-container">
             <label for="prosent">Prosentandel (f.eks. 1):</label>
-            <input type="number" id="prosent" value="1" min="1"> %
+            <input type="number" id="prosent" value="1" min="0" step="0.1"> %
 
             <label for="kr">Verdi per kunde:</label>
-            <input type="number" id="kr" value="500" min="100"> kr
+            <input type="number" id="kr" value="500" min="0"> kr
+
+            <label for="apningsdager">Åpningsdager per år:</label>
+            <input type="number" id="apningsdager" value="250" min="0">
         </div>
 
         <div id="tabeller"></div>
@@ -76,12 +79,12 @@ const coopgoData = [
     { navn: "E39 Lagunen, Bergen", adt: "Ukjent" },
 ];
 
-// Formatering av beløp (to desimaler + tusenskiller)
+// Formatering av beløp
 function formater(kr) {
     return Math.round(kr).toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") + " kr";
 }
 
-// Formatering av antall kunder (ingen desimaler + tusenskiller)
+// Formatering av antall kunder
 function formaterAntall(verdi) {
     return Math.round(verdi).toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ");
 }
@@ -90,37 +93,42 @@ function formaterAntall(verdi) {
 function visTabeller() {
     const prosent = parseFloat(document.getElementById("prosent").value) || 0;
     const kr = parseFloat(document.getElementById("kr").value) || 0;
+    const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening: ÅDT × prosent × kr</th></tr>";
-    
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (formel)</th></tr>";
+
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
         const antallKunder = adt * (prosent / 100);
-        const inntjening = antallKunder * kr;
+        const inntjeningDag = antallKunder * kr;
+        const inntjeningAar = inntjeningDag * apningsdager;
         html += `<tr>
                     <td>${item.navn}</td>
                     <td>${item.adresse}</td>
                     <td>${item.adt}</td>
                     <td>${formaterAntall(antallKunder)}</td>
-                    <td>${formater(inntjening)}</td>
+                    <td>${formater(inntjeningDag)}</td>
+                    <td>${formater(inntjeningDag)} × ${apningsdager} = <strong>${formater(inntjeningAar)}</strong></td>
                 </tr>`;
     });
     html += "</table>";
 
-    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening: ÅDT × prosent × kr</th></tr>";
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (formel)</th></tr>";
 
     coopgoData.forEach(item => {
         if (item.adt === "Ukjent") {
-            html += `<tr><td>${item.navn}</td><td>Ukjent</td><td>Estimert</td><td>Estimert</td></tr>`;
+            html += `<tr><td>${item.navn}</td><td>Ukjent</td><td>Estimert</td><td>Estimert</td><td>Estimert</td></tr>`;
         } else {
             const adt = parseInt(item.adt.replace(/\s/g, ""));
             const antallKunder = adt * (prosent / 100);
-            const inntjening = antallKunder * kr;
+            const inntjeningDag = antallKunder * kr;
+            const inntjeningAar = inntjeningDag * apningsdager;
             html += `<tr>
                         <td>${item.navn}</td>
                         <td>${item.adt}</td>
                         <td>${formaterAntall(antallKunder)}</td>
-                        <td>${formater(inntjening)}</td>
+                        <td>${formater(inntjeningDag)}</td>
+                        <td>${formater(inntjeningDag)} × ${apningsdager} = <strong>${formater(inntjeningAar)}</strong></td>
                     </tr>`;
         }
     });
@@ -132,6 +140,7 @@ function visTabeller() {
 // Oppdater tabeller når input endres
 document.getElementById("prosent").addEventListener("input", visTabeller);
 document.getElementById("kr").addEventListener("input", visTabeller);
+document.getElementById("apningsdager").addEventListener("input", visTabeller);
 
 // Initielt kall for å vise tabeller
 visTabeller();
