--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function visTabeller() {
     const kr = parseFloat(document.getElementById("kr").value) || 0;
     const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (formel)</th></tr>";
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag(AntallKunder*kr)</th><th>Årlig inntjening (Inntjening per dag * Antall arbeidsdager)</th></tr>";
 
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
