--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function visTabeller() {
     const kr = parseFloat(document.getElementById("kr").value) || 0;
     const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag(AntallKunder*kr)</th><th>Årlig inntjening (Inntjening per dag * Antall arbeidsdager)</th></tr>";
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (Antall kunder per døgn × Antall åpningsdager × kr)</th></tr>";
 
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
@@ -108,12 +108,12 @@ function visTabeller() {
                     <td>${item.adt}</td>
                     <td>${formaterAntall(antallKunder)}</td>
                     <td>${formater(inntjeningDag)}</td>
-                    <td>${formater(inntjeningDag)} × ${apningsdager} = <strong>${formater(inntjeningAar)}</strong></td>
+                    <td><strong>${formater(inntjeningAar)}</strong></td>
                 </tr>`;
     });
     html += "</table>";
 
-    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (formel)</th></tr>";
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>Antall kunder (ÅDT × prosent)</th><th>Inntjening per dag</th><th>Årlig inntjening (Antall kunder per døgn × Antall åpningsdager × kr)</th></tr>";
 
     coopgoData.forEach(item => {
         if (item.adt === "Ukjent") {
@@ -128,7 +128,7 @@ function visTabeller() {
                         <td>${item.adt}</td>
                         <td>${formaterAntall(antallKunder)}</td>
                         <td>${formater(inntjeningDag)}</td>
-                        <td>${formater(inntjeningDag)} × ${apningsdager} = <strong>${formater(inntjeningAar)}</strong></td>
+                        <td><strong>${formater(inntjeningAar)}</strong></td>
                     </tr>`;
         }
     });
