--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input type="number" id="kr" value="500" min="0"> kr
 
             <label for="apningsdager">Åpningsdager per år:</label>
-            <input type="number" id="apningsdager" value="300" min="0">
+            <input type="number" id="apningsdager" value="355" min="0">
         </div>
 
         <div id="tabeller"></div>
@@ -79,14 +79,15 @@ const coopgoData = [
     { navn: "E39 Lagunen, Bergen", adt: "Ukjent" },
 ];
 
-// Formatering av beløp
+// Formatering av tall og kr
 function formater(kr) {
     return Math.round(kr).toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") + " kr";
 }
-
-// Formatering av antall kunder
 function formaterAntall(verdi) {
     return Math.round(verdi).toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ");
+}
+function formaterProsent(verdi) {
+    return verdi.toFixed(2).replace(".", ",") + " %";
 }
 
 // Funksjon for å vise tabellene
@@ -95,16 +96,18 @@ function visTabeller() {
     const kr = parseFloat(document.getElementById("kr").value) || 0;
     const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Inntjening per uke</th><th>Inntjening per måned</th><th>Årlig inntjening</th><th>Markedsandel</th></tr>";
 
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
         const adtHalv = adt / 2;
         const antallKunder = adtHalv * (prosent / 100);
         const inntjeningDag = antallKunder * kr;
-        const inntjeningUke = inntjeningDag * 6;     // Endret til 6
-        const inntjeningMnd = inntjeningUke * 4;     // Endret til uke × 4
+        const inntjeningUke = inntjeningDag * 6;
+        const inntjeningMnd = inntjeningUke * 4;
         const inntjeningAar = inntjeningDag * apningsdager;
+        const markedsandel = (antallKunder * 6) / adtHalv * 100;
+
         html += `<tr>
                     <td>${item.navn}</td>
                     <td>${item.adresse}</td>
@@ -115,23 +118,26 @@ function visTabeller() {
                     <td>${formater(inntjeningUke)}</td>
                     <td>${formater(inntjeningMnd)}</td>
                     <td><strong>${formater(inntjeningAar)}</strong></td>
+                    <td>${formaterProsent(markedsandel)}</td>
                 </tr>`;
     });
     html += "</table>";
 
-    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Inntjening per uke</th><th>Inntjening per måned</th><th>Årlig inntjening</th><th>Markedsandel</th></tr>";
 
     coopgoData.forEach(item => {
         if (item.adt === "Ukjent") {
-            html += `<tr><td>${item.navn}</td><td>Ukjent</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td></tr>`;
+            html += `<tr><td>${item.navn}</td><td>Ukjent</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td><td>Estimert</td></tr>`;
         } else {
             const adt = parseInt(item.adt.replace(/\s/g, ""));
             const adtHalv = adt / 2;
             const antallKunder = adtHalv * (prosent / 100);
             const inntjeningDag = antallKunder * kr;
-            const inntjeningUke = inntjeningDag * 6;     // Endret til 6
-            const inntjeningMnd = inntjeningUke * 4;     // Endret til uke × 4
+            const inntjeningUke = inntjeningDag * 6;
+            const inntjeningMnd = inntjeningUke * 4;
             const inntjeningAar = inntjeningDag * apningsdager;
+            const markedsandel = (antallKunder * 6) / adtHalv * 100;
+
             html += `<tr>
                         <td>${item.navn}</td>
                         <td>${formaterAntall(adt)}</td>
@@ -141,6 +147,7 @@ function visTabeller() {
                         <td>${formater(inntjeningUke)}</td>
                         <td>${formater(inntjeningMnd)}</td>
                         <td><strong>${formater(inntjeningAar)}</strong></td>
+                        <td>${formaterProsent(markedsandel)}</td>
                     </tr>`;
         }
     });
@@ -154,7 +161,7 @@ document.getElementById("prosent").addEventListener("input", visTabeller);
 document.getElementById("kr").addEventListener("input", visTabeller);
 document.getElementById("apningsdager").addEventListener("input", visTabeller);
 
-// Initielt kall for å vise tabeller
+// Initielt kall
 visTabeller();
 </script>
 
