--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ const coopgoData = [
     { navn: "E39 Lagunen, Bergen", adt: "Ukjent" },
 ];
 
-// Formatering av tall og kr
+// Formatering
 function formater(kr) {
     return Math.round(kr).toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") + " kr";
 }
@@ -96,7 +96,7 @@ function visTabeller() {
     const kr = parseFloat(document.getElementById("kr").value) || 0;
     const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Inntjening per uke</th><th>Inntjening per måned</th><th>Årlig inntjening</th><th>Markedsandel</th></tr>";
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
 
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
@@ -114,16 +114,16 @@ function visTabeller() {
                     <td>${formaterAntall(adt)}</td>
                     <td>${formaterAntall(adtHalv)}</td>
                     <td>${formaterAntall(antallKunder)}</td>
+                    <td>${formaterProsent(markedsandel)}</td>
                     <td>${formater(inntjeningDag)}</td>
                     <td>${formater(inntjeningUke)}</td>
                     <td>${formater(inntjeningMnd)}</td>
                     <td><strong>${formater(inntjeningAar)}</strong></td>
-                    <td>${formaterProsent(markedsandel)}</td>
                 </tr>`;
     });
     html += "</table>";
 
-    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Inntjening per dag</th><th>Inntjening per uke</th><th>Inntjening per måned</th><th>Årlig inntjening</th><th>Markedsandel</th></tr>";
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
 
     coopgoData.forEach(item => {
         if (item.adt === "Ukjent") {
@@ -143,11 +143,11 @@ function visTabeller() {
                         <td>${formaterAntall(adt)}</td>
                         <td>${formaterAntall(adtHalv)}</td>
                         <td>${formaterAntall(antallKunder)}</td>
+                        <td>${formaterProsent(markedsandel)}</td>
                         <td>${formater(inntjeningDag)}</td>
                         <td>${formater(inntjeningUke)}</td>
                         <td>${formater(inntjeningMnd)}</td>
                         <td><strong>${formater(inntjeningAar)}</strong></td>
-                        <td>${formaterProsent(markedsandel)}</td>
                     </tr>`;
         }
     });
