--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <label for="prosent">Prosentandel (f.eks. 1):</label>
             <input type="number" id="prosent" value="1" min="0" step="0.1"> %
 
-            <label for="kr">Verdi per kunde:</label>
-            <input type="number" id="kr" value="500" min="0"> kr
+            <label for="kr">Forbruk per kunde per uke:</label>
+            <input type="number" id="kr" value="1500" min="0"> kr
 
             <label for="apningsdager">Åpningsdager per år:</label>
             <input type="number" id="apningsdager" value="300" min="0">
