--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ function visTabeller() {
     const kr = parseFloat(document.getElementById("kr").value) || 0;
     const apningsdager = parseInt(document.getElementById("apningsdager").value) || 0;
 
-    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
+    let html = "<h2>Coop Lagerlokasjoner</h2><table><tr><th>Navn</th><th>Adresse</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Omsetning per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig omsetning</th></tr>";
 
     lagerData.forEach(item => {
         const adt = parseInt(item.adt.replace(/\s/g, ""));
@@ -123,7 +123,7 @@ function visTabeller() {
     });
     html += "</table>";
 
-    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Inntjening per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig inntjening</th></tr>";
+    html += "<h2>Ønskede CoopGo-stasjoner</h2><table><tr><th>Navn</th><th>ÅDT</th><th>ÅDT/2</th><th>Antall kunder</th><th>Markedsandel</th><th>Omsetning per dag</th><th>Per uke</th><th>Per måned</th><th>Årlig omsetning</th></tr>";
 
     coopgoData.forEach(item => {
         if (item.adt === "Ukjent") {
