--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <div class="hoyre">
         <div class="filter-container">
-            <label for="prosent">Ukentlig markedsandel (f.eks. 5):</label>
-            <input type="number" id="prosent" value="5" min="0" step="0.1"> %
+            <label for="prosent">Ukentlig markedsandel:</label>
+            <input type="number" id="prosent" value="6" min="0" step="1"> %
 
             <label for="kr">Forbruk per kunde per uke:</label>
             <input type="number" id="kr" value="1500" min="0"> kr
